kubernetes/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway-service
        image: praspit/sds-gateway-service:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health-check
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-service
spec:
  selector:
    app: gateway-service
  type: NodePort 
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 30080
