kubernetes/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
  labels:
    app: inventory-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-deployment
  template:
    metadata:
      labels:
        app: inventory-deployment
    spec:
      containers:
        - name: inventory-container
          image: wrcing21/inventory-service:lastest
          ports:
            - containerPort: 8003

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-service
spec:
  selector:
    app: inventory-deployment
  ports:
  - protocol: TCP
    port: 8003
    targetPort: 8003
