kubernetes/shop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-service-deployment
  labels:
    app: shop-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-service
  template:
    metadata:
      labels:
        app: shop-service
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1  
              preference:
                matchExpressions:
                - key: nodename
                  operator: In
                  values:
                  - worker1
      containers:
      - name: shop-service
        image: praspit/sds-shop-service:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: shop-service-service
spec:
  selector:
    app: shop-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
